# game

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CPPLINT.cfg  Cargo.toml  DEVGUIDE.md  InitDB.fsx  Makefile  NovelGame.sln  NovelGame.vcxproj  README.md  SaveData.vcxproj  VK_GUIDE.md  install-sqlite3.ps1  load.cpp  main.cpp  packages.config  save.cpp  save_data.sqlite3  test.cpp
.github/workflows/: build.yml  format.yml  lint.yml  release.yml  test.yml
.run/: game.run.xml  test.run.xml
app/: Cargo.toml
app/shaders/: build.ninja
app/src/: lib.rs  logical_device.rs  main.rs  queue_family_index.rs
core/: index.html  package-lock.json
core/src-frontend/: NovelGame.fsproj
core/src-tauri/: .gitignore
derive-builder/: Cargo.toml
derive-builder/src/: lib.rs
drama_script/: GenJson.fsx  GenScript.fsx  README.md
ds-compiler/: .eslintrc.js  .npmignore  .prettierrc.js  build.sbt  package-lock.json  package.json  tsconfig.json
ds-compiler/scripts/: build.ts
ds-compiler/src/: index.d.ts  index.ts
novel_game_rs/: Cargo.toml  README.md
novel_game_rs/src/: main.rs
npm-packages/ds-compiler/: .gitignore  README.md  bsconfig.json  example.tdrama  package-lock.json  package.json  (+1 more)
remake/: .gitignore  README.md  package.json  webpack.config.ts
shaders/: .gitignore
src/: command_buffer.rs  command_pool.rs  compile_time.cpp  database.cpp  database.hpp  device.rs  framebuffer.rs  glfw_wrapper.rs  image.rs  instance.rs  layer.rs  lib.rs  linear_image.rs  load.cpp  logical_device.rs  main.cpp  main.rs  managed_glfw.rs  optimized_image.rs  physical_device.rs  pipeline.rs  queue_family.rs  queue_family_index.rs  render_pass.rs  save.cpp  save_data.cpp  save_data.hpp  save_data.proto  shader.rs  surface.rs  swapchain.rs  test.cpp  window.rs
(+38 files in other folders)
