cmake_minimum_required(VERSION 3.17)
project(Game)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra")
add_executable(Game main.cpp)
find_package(Vulkan REQUIRED)
find_package(glfw3 3.3 REQUIRED)
include_directories(${Vulkan_INCLUDE_DIRS})
target_link_libraries(Game ${Vulkan_LIBRARIES} glfw)
