[package]
name = "game"
version = "0.1.0"
authors = ["0918nobita"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ash = "0.32"
env_logger = "0.8"
log = "0.4"
once_cell = "1.8"
scopeguard = "1.1"
thiserror = "1.0"
vk-sys = "0.7"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
features = ["vulkan"]

[features]
default = ["validation_layers"]
validation_layers = []

[profile.release]
codegen-units = 1
panic = "abort"
