[package]
name = "game"
version = "0.1.0"
authors = ["0918nobita"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ash = "0.32"
env_logger = "0.8"
image = "0.23"
log = "0.4"
once_cell = "1.8"
vk-sys = "0.7"

[dependencies.derive-builder]
path = "../derive-builder"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
features = ["vulkan"]

[features]
default = ["validation_layers"]
validation_layers = []
